# language-tutor

./: .env.sample  .gitignore  PRACTICE_MODE_FIXES.md  README.md  README_new.md  pyproject.toml  setup.py  test_complete_audio.py  test_gemini.py  test_method_exists.py  test_stt.py  test_stt_quick.py  test_stt_real.py  test_voice_diff.py  test_voices.py
docs/: dialogue_formats.md  stt_feature.md
examples/: whisperspeech_example.py
sample_dialogues/: README.md  pharmacy_visit.md  restaurant_reservation.md  sample_directions.csv  sample_directions.md  sample_restaurant.txt  sample_shopping.json  supermarche.md
src/language_tutor/: __init__.py  cli.py  config_manager.py
src/language_tutor/api/: __init__.py  llm_client.py  tts_client.py  tts_client_new.py
src/language_tutor/models/: __init__.py  config.py  dialogue.py
src/language_tutor/services/: __init__.py  audio_service.py  audio_service_new.py  dialogue_service.py  file_service.py  stt_service.py  stt_service_clean.py
src/language_tutor/ui/: __init__.py  streamlit_app.py
tests/: CONFIGURATION_SUMMARY.py  README.md  demo_configuration.py  diagnose_microphone.py  final_integration_test.py  streamlit_app_simple.py  test_core_integration.py  test_gemini.py  test_gtts.py  test_gtts_fixed.py  test_voices.py  test_whisperspeech.py  test_whisperspeech_minimal.py  verify_integration.py
